src- Version 4.19/objects/Job__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Once the customer accepts the Quote it is converted into Order. Order is a confirmed sale by the customer.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Job</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This holds the ACV for the deal which is the annual value of all subscription services in this order. 

ACV = Today&apos;s MRR * 12</description>
        <inlineHelpText>This holds the ACV for the deal which is the annual value of all subscription services in this order. 

ACV = Today&apos;s MRR * 12</inlineHelpText>
        <label>Annual Contract Value (ACV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Account)</relationshipLabel>
        <relationshipName>Billing_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Billing Contact)</relationshipLabel>
        <relationshipName>Job2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Consortium Billing. The Pricing/Discount should be recorded at the Order level belonging to this Master Account.</description>
        <inlineHelpText>Used in Consortium Billing. The Pricing/Discount should be recorded at the Order level belonging to this Master Account.</inlineHelpText>
        <label>Billing Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Master Account)</relationshipLabel>
        <relationshipName>BillingMasterAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order level belonging to the Master Account.</description>
        <inlineHelpText>Used in Consortium Billing. The Pricing/Discount should be recorded at this order level belonging to the Master Account.</inlineHelpText>
        <label>Billing Master Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Job__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Billing_Master_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Job__c.Is_Billing_Master_Order__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Orders (Billing Master Order)</relationshipLabel>
        <relationshipName>BillingMasterOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summarizedField>Job_Product__c.Charges_without_a_Charge_Date__c</summarizedField>
        <summaryForeignKey>Job_Product__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_MRR__c</fullName>
        <description>TCV / Terms(In Months)</description>
        <inlineHelpText>This is the contracted Monthly Recurring Revenue
Calculated as  TCV / Terms(Months)</inlineHelpText>
        <label>Contracted MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Invoice_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is true, then on Order creation invoice is created automatically</description>
        <label>Create Invoice Automatically?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <formula>CurrencyL__r.Currency_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>Discount offered on this Order</description>
        <inlineHelpText>Discount offered on this Order</inlineHelpText>
        <label>Discount Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <description>Exchange Rate Applied</description>
        <inlineHelpText>If you are a multi currency org, this field will hold the Exchange Rate between the Order Currency and your Corporate Currency. 
Value in Corporate Currency = Value in Order Currency x Exchange Rate Applied</inlineHelpText>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <label>Invoice Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Batch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Billing_Master_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Consortium Billing. Check this field if you are using this Order to as the billing master Order for other child Orders. The Pricing/Discount should be recorded as part of this Order record</description>
        <inlineHelpText>Used in Consortium Billing. Check this field if you are using this Order to as the Billing Master Order for other child Orders. The Pricing/Discount should be recorded as part of this Order record</inlineHelpText>
        <label>Is Billing Master Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obsolete_Master Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Child Orders</relationshipLabel>
        <relationshipName>MasterOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Next_Charge_Date_For_Product__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <description>Subtotal - Discount Value</description>
        <inlineHelpText>Subtotal - Discount Value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Terms__c</fullName>
        <description>Leave this blank for &quot;Evergreen Subscriptions&quot; i.e., those that don&apos;t expire</description>
        <inlineHelpText>The duration of the service in months (for example: 12, 24, 36).

Leave this field blank to create a non-expiring or &quot;Evergreen&quot; subscription.</inlineHelpText>
        <label>Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Vat_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override VAT/Tax ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Partner who places the Order on behalf of the Client</description>
        <inlineHelpText>Select the Partner who places the Order on behalf of the Client</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Partner)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Payment Plan. We will give the option to select the Payment Plan.</description>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment Terms to be used on Invoice Due Date calculation, It is used only if the DEFAULT_PAYMENT_TERMS_TO_BE_USED_FROM is &quot;ORDER&quot;</description>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due On Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Billing_Day__c</fullName>
        <description>Some calendar months don&apos;t have the 29th, 30th or the 31st day. If you select these days and the running month doesn&apos;t have them, the invoices will be created on the last day of the month</description>
        <inlineHelpText>Some calendar months don&apos;t have the 29th, 30th or the 31st day. If you select these days and the running month doesn&apos;t have them, the invoices will be created on the last day of the month</inlineHelpText>
        <label>Preferred Billing Day of the month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corresponding Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Orders created from this Quote</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is is true, then calculation will happen</description>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renew_Batch_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renew Batch (Created By)</label>
        <referenceTo>Batch_Jobs__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renew_to__c</fullName>
        <inlineHelpText>Opportunity or Order to renew</inlineHelpText>
        <label>Renew to?</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms_Months__c</fullName>
        <label>Renewal Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Orders (Renewed From)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <description>Shows the Date on which the Service commences. The field can also be used to record the Order Delivery Date.</description>
        <inlineHelpText>The Service Starts on this Date. Can also be used to record the Order Delivery Date.</inlineHelpText>
        <label>Service Start Date / Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <description>The Service/Subscription for this Order ends on this Date.</description>
        <inlineHelpText>The Date on which the Order Service/Subscription ends.</inlineHelpText>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary(Shipping) Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Shipping Contact)</relationshipLabel>
        <relationshipName>Job1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <description>Quantity * Unit Price</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Status__c</fullName>
        <label>Tax Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Avalara AvaTax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Todays_MRR__c</fullName>
        <description>This is the Monthly Recurring Revenue calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</description>
        <inlineHelpText>This is the Monthly Recurring Revenue calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</inlineHelpText>
        <label>Today&apos;s MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Todays_MRR_with_Tax__c</fullName>
        <description>This is the Monthly Recurring Revenue with Tax calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</description>
        <inlineHelpText>This is the Monthly Recurring Revenue + Tax calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</inlineHelpText>
        <label>Today&apos;s MRR with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfitPercent__c</fullName>
        <description>(Grand Total - Total Cost) 
----------------------------------   x  100
          Grand Total</description>
        <inlineHelpText>(Grand Total - Total Cost) 
----------------------------------   x  100
          Grand Total</inlineHelpText>
        <label>Total Profit Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Profit_Percent__c</fullName>
        <label>Obsolete Total Profit Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <label>Total Profit (Excl Tax/VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Service_Activation_Date__c</columns>
        <columns>Todays_MRR__c</columns>
        <columns>Todays_MRR_with_Tax__c</columns>
        <columns>CurrencyL__c</columns>
        <columns>Status__c</columns>
        <columns>Total__c</columns>
        <columns>Service_End_Date__c</columns>
        <columns>Preferred_Billing_Day__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Master_rules</fullName>
        <active>true</active>
        <description>An order that is a billing master cannot lookup to another billing master order</description>
        <errorConditionFormula>Is_Billing_Master_Order__c 
&amp;&amp;
(
 Billing_Master_Account__c != null
||
 Billing_Master_Order__c != null
)</errorConditionFormula>
        <errorMessage>A Billing Master Order cannot have the fields Billing Master Account or Billing Master Order populated</errorMessage>
    </validationRules>
</CustomObject>